--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -34,14 +34,6 @@ config MSM_MDP31
 	depends on ARCH_QSD8X50
 	default y
 
-config TURBO_MODE
-    bool "Turbo mode"
-    depends on ARCH_MSM7225 || ARCH_MSM7X00A
-    default n
-    help
-      This option is used to indicate hardware support for running the
-      memory bus at a higher speed.(only for 7X00A/7225)
-
 config MSM_AMSS_VERSION
 	int
 	default 6210 if MSM_AMSS_VERSION_6210
@@ -66,10 +58,6 @@ choice
 	config MSM_AMSS_VERSION_6350
 		bool "6.3.50"
 endchoice
-
-config MSM_AMSS_SUPPORT_256MB_EBI1
-	default n
-	bool "AMSS that support unified 128MB and 256MB EBI1"
 
 config MSM_DEBUG_UART
 	int
@@ -186,6 +174,20 @@ config HTC_PWRSINK
 	depends on MSM_SMD
 	default y
 	bool "HTC Power Sink Driver"
+
+config QSD_SVS
+	bool "QSD Static Voltage Scaling"
+	depends on (ARCH_MSM_SCORPION)
+	default y
+	help
+	  Enables static voltage scaling using the TPS65023 PMIC.
+
+config QSD_PMIC_DEFAULT_DCDC1
+	int "PMIC default output voltage"
+	depends on (ARCH_MSM_SCORPION)
+	default 1250
+	help
+	  This is the PMIC voltage at Linux kernel boot.
 
 config CACHE_FLUSH_RANGE_LIMIT
 	hex "Cache flush range limit"
@@ -404,6 +406,15 @@ config MSM_CPU_FREQ_SCREEN_ON
 
 endif # MSM_CPU_FREQ_SCREEN
 
+config MSM_CPU_AVS
+	bool "Enable Adaptive Voltage Scaling (AVS)"
+	depends on (ARCH_MSM_SCORPION && QSD_SVS)
+	default y
+	help
+	  This enables the Adaptive Voltage Scaling feature of
+	  Qualcomm ARMv7 CPUs. It adjusts the voltage for each frequency
+	  based on feedback from three ring oscillators in the CPU.
+
 config MSM_HW3D
 	tristate "MSM Hardware 3D Register Driver"
 	depends on EARLYSUSPEND
@@ -476,3 +487,5 @@ config VIRTUAL_KPANIC_SRC
 	  Sets the partition to steal from to make the virtual one.
 	
 endif
+
+
