--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -34,6 +34,13 @@ config MSM_MDP31
 	depends on ARCH_QSD8X50
 	default y
 
+config TURBO_MODE
+	bool "Turbo mode"
+	depends on ARCH_MSM7225 || ARCH_MSM7X00A
+	default n
+	help
+		This option is used to indicate hardware support for running the memory bus at a higher speed.(only for 7X00A/7225)
+
 config MSM_AMSS_VERSION
 	int
 	default 6210 if MSM_AMSS_VERSION_6210
@@ -58,6 +65,10 @@ choice
 	config MSM_AMSS_VERSION_6350
 		bool "6.3.50"
 endchoice
+
+config MSM_AMSS_SUPPORT_256MB_EBI1
+	default n
+	bool "AMSS that support unified 128MB and 256MB EBI1"
 
 config MSM_DEBUG_UART
 	int
